[gd_scene load_steps=4 format=3 uid="uid://b6cj776w0uoxh"]

[ext_resource type="FontFile" path="res://addons/arcade/assets/fonts/Quantico30.tres" id="1"]
[ext_resource type="Script" path="res://scenes/ui/game_summary/game_summary.gd" id="1_8xx65"]
[ext_resource type="FontFile" path="res://addons/arcade/assets/fonts/Quantico50.tres" id="2"]

[node name="GameSummary" type="PanelContainer"]
offset_left = 171.0
offset_top = 265.0
offset_right = 433.0
offset_bottom = 441.0
script = ExtResource("1_8xx65")

[node name="GridContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
text = "Final Score:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="p1Score" type="Label" parent="GridContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2")
text = "4"
horizontal_alignment = 1

[node name="p2Score" type="Label" parent="GridContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2")
text = "2"
horizontal_alignment = 1

[node name="summary" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
text = "Player 1 Wins!"
horizontal_alignment = 1
